templates/network-infrastructure.yaml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: >
  All networking related components for the project

Parameters:
  ParentStack:
    Type: String
    Description: Parent stack this template was launched from, used for naming SSM parameters

  UseCase:
    Type: String
    Default: hammerdb
    AllowedPattern: "[a-z_]+"

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      CidrBlock: '10.0.0.0/16'
      Tags:
        - Key: "Application"
          Value: !Ref ParentStack
        - Key: "Network"
          Value: "Private"
        - Key: "Name"
          Value: !Sub 'vpc-${UseCase}'

  PrivateSubnetA:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub "${AWS::Region}a"
      CidrBlock: "10.0.0.0/24"
      Tags:
        - Key: "Application"
          Value: !Ref ParentStack
        - Key: "Network"
          Value: "Private"
        - Key: "Name"
          Value: !Sub 'subnet-private-${UseCase}-${AWS::Region}a'

  PrivateSubnetB:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub "${AWS::Region}b"
      CidrBlock: "10.0.1.0/24"
      Tags:
        - Key: "Application"
          Value: !Ref ParentStack
        - Key: "Network"
          Value: "Private"
        - Key: "Name"
          Value: !Sub 'subnet-private-${UseCase}-${AWS::Region}b'

  PublicSubnetA:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub "${AWS::Region}a"
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: "true"
      Tags:
        - Key: "Application"
          Value: !Ref ParentStack
        - Key: "Network"
          Value: "Public"
        - Key: "Name"
          Value: !Sub 'subnet-public-${UseCase}-${AWS::Region}a'

  PublicSubnetB:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub "${AWS::Region}b"
      CidrBlock: "10.0.3.0/24"
      MapPublicIpOnLaunch: "true"
      Tags:
        - Key: "Application"
          Value: !Ref ParentStack
        - Key: "Network"
          Value: "Public"
        - Key: "Name"
          Value: !Sub 'subnet-public-${UseCase}-${AWS::Region}b'

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: "Application"
          Value: !Ref ParentStack
        - Key: "Network"
          Value: "Private"
        - Key: "Name"
          Value: !Sub 'igw-${UseCase}'

  GatewayToInternet:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Application"
          Value: !Ref ParentStack
        - Key: "Network"
          Value: "Public"
        - Key: "Name"
          Value: !Sub 'route-table-public-${UseCase}'

  PublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociationA:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociationB:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable

  PublicNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Application"
          Value: !Ref ParentStack
        - Key: "Network"
          Value: "Public"
        - Key: "Name"
          Value: !Sub 'nacl-public-${UseCase}'

  InboundHTTPPublicNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"

  OutboundPublicNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"

  PublicSubnetNetworkAclAssociationA:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref PublicSubnetA
      NetworkAclId: !Ref PublicNetworkAcl

  PublicSubnetNetworkAclAssociationB:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref PublicSubnetB
      NetworkAclId: !Ref PublicNetworkAcl

  ElasticIPA:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"

  ElasticIPB:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"

  NATGatewayA:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt ElasticIPA.AllocationId
      SubnetId: !Ref PublicSubnetA

  NATGatewayB:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt ElasticIPB.AllocationId
      SubnetId: !Ref PublicSubnetB

  PrivateRouteTableA:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value: !Sub 'route-table-private-a-${UseCase}'

  PrivateRouteTableB:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value: !Sub 'route-table-private-b-${UseCase}'

  PrivateRouteToInternetA:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGatewayA

  PrivateRouteToInternetB:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTableB
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGatewayB

  PrivateSubnetRouteTableAssociationA:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTableA

  PrivateSubnetRouteTableAssociationB:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTableB

  DataLakeEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - !Ref PublicRouteTable
        - !Ref PrivateRouteTableA
        - !Ref PrivateRouteTableB
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcEndpointType: Gateway
      VpcId: !Ref VPC

  RdbmsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow connections to postgres from private subnets. Manually attach to source RDS Instance.
      GroupName: "Internal Postgres"
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: "0.0.0.0/0"
          Description: "Allow outbound"
      SecurityGroupIngress:
        - CidrIp: "10.0.0.0/24"
          FromPort: 5432
          ToPort: 5432
          IpProtocol: tcp
        - CidrIp: "10.0.1.0/24"
          FromPort: 5432
          ToPort: 5432
          IpProtocol: tcp
      VpcId: !Ref VPC

  VpcIdParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Description: Runtime VPC ID
      Name: !Sub '/${ParentStack}/network/vpc/id'
      Type: String
      Value: !Ref VPC

  SubnetIdAParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Description: Runtime Subnet A
      Name: !Sub '/${ParentStack}/network/subnet/a/id'
      Type: String
      Value: !Ref PrivateSubnetA

  SubnetIdBParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Description: Runtime Subnet B
      Name: !Sub '/${ParentStack}/network/subnet/b/id'
      Type: String
      Value: !Ref PrivateSubnetB

  DataLakeEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Description: DataLake S3 VPC Endpoint ID
      Name: !Sub '/${ParentStack}/network/vpce/datalake/id'
      Type: String
      Value: !Ref DataLakeEndpoint
